--- a/PedEconomy.csproj
+++ b/PedEconomy.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{98F7FB58-9231-4B1D-82F8-AFDCAF8729C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Freeze</RootNamespace>
-    <AssemblyName>Freeze</AssemblyName>
+    <RootNamespace>PedEconomy</RootNamespace>
+    <AssemblyName>PedEconomy</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -44,15 +44,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SQLite">
-      <HintPath>..\..\..\TShock-4.3.3\DiabledPlugins\System.Data.SQLite.dll</HintPath>
+      <HintPath>DLLs\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="TerrariaServer, Version=1.3.0.6, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\TShock-4.3.9\TerrariaServer.exe</HintPath>
+      <HintPath>D:\TShock\TerrariaServer.exe</HintPath>
     </Reference>
     <Reference Include="TShockAPI, Version=4.3.9.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\TShock-4.3.9\ServerPlugins\TShockAPI.dll</HintPath>
+      <HintPath>D:\TShock\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
